# repo

./: README.md  pyproject.toml
cards/: sample.mtg
docs/: GAP_ANALYSIS.md
mtg_engine/: __init__.py
mtg_engine/cli/: __init__.py  main.py
mtg_engine/core/: __init__.py  adventure.py  battle.py  card.py  combat.py  commander.py  continuous_effects.py  copy_effects.py  enums.py  equipment.py  face_down.py  game.py  game_state.py  keywords.py  mana.py  mana_abilities.py  multiplayer.py  planeswalker.py  player.py  poison.py  replacement_effects.py  sagas.py  sideboard.py  stack.py  transform.py  triggers.py
mtg_engine/dsl/: __init__.py  grammar.py  parser.py
mtg_engine/web/: __init__.py  __main__.py  app.py
mtg_engine/web/static/: style.css
mtg_engine/web/templates/: index.html
tests/: test_adventure.py  test_battle.py  test_card.py  test_combat.py  test_commander.py  test_continuous_effects.py  test_continuous_effects_extended.py  test_copy_effects.py  test_dsl.py  test_dsl_phase2.py  test_dsl_phase3.py  test_effects_extended.py  test_equipment.py  test_face_down.py  test_game.py  test_keywords.py  test_mana.py  test_mana_abilities.py  test_mana_extended.py  test_multi_type.py  test_multiplayer.py  test_phase5_features.py  test_planeswalker.py  test_poison.py  test_replacement_effects.py  test_replacement_integration.py  test_sagas.py  test_sba.py  test_sideboard.py  test_transform.py  test_ward_protection.py
