[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtg-engine"
version = "0.1.0"
description = "A Magic: The Gathering rules engine for designing and testing custom cards"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "lark>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
mtg = "mtg_engine.cli.main:main"

[tool.setuptools.packages.find]
include = ["mtg_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
